<resources>
    <string name="app_name">KarboTrek</string>
    <string name="app_logo_description">KarboTrek Logo</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_body">KarboTrek is an app that aims to keep track of the carbon emission expenses related to your car, showing graphs and information about the amount of CO emitted.\n\nAfter registering your car, you can start recording your travel and track your carbon expenses. KarboTrek will also send you notification alert to inform if your emission exceeds recommended threshold.</string>
    <string name="btn_continue">Continue</string>
    <string name="select_brand_title">Select your car\'s manufacturer</string>
    <string name="select_model_title">Select your car\'s model</string>
    <string name="select_model_fuel">Select your car\'s fuel type</string>
    <string name="select_euro_title">Select your car\'s RON-class</string>
    <string name="search_brand">Search manufacturer</string>
    <string name="search_model">Search model</string>
    <string name="diesel">Diesel</string>
    <string name="petrol">Petrol</string>
    <string name="hybrid">Hybrid</string>
    <string name="fab_add_expense">Add expense</string>
    <string name="Get_co2_readings" translatable="false">CO2 Monitor</string>
    <string name="btn_register">Register</string>
    <string name="hint_km">Ex: 49556 km</string>
    <string name="label_total_km">Total car\'s km</string>
    <string name="hint_total_spent">Ex: 30 MYR</string>
    <string name="label_total_spent">Total spent</string>
    <string name="label_price_per_liter">Price per liter</string>
    <string name="hint_price_per_liter">Ex: 2.05 MYR/l</string>
    <string name="label_add_refuel">Add refuel</string>
    <string name="hint_insurance_year">Ex: 2023</string>
    <string name="label_insurance_year">Year</string>
    <string name="label_add_insurance">Add insurance</string>
    <string name="label_optional_details">Additional description</string>
    <string name="hint_optional_description">Insert here additional notes</string>
    <string name="label_optional_description">Additional notes</string>
    <string name="hint_insurance_price">Ex: 290 MYR</string>
    <string name="label_add_maintenance">Add maintenance</string>
    <string name="label_title_maintenance">Intervention name</string>
    <string name="hint_title_maintenance">What intervention was done?</string>
    <string name="example_date">Ex: 07/06/2023</string>
    <string name="label_date">Date (default: today)</string>
    <string name="hint_tax_title">Ex: Car tax</string>
    <string name="label_add_tax">Add tax</string>
    <string name="label_tax_title">Tax name</string>
    <string name="hint_co2_title" translatable="false">Ex: Car CO2 emission</string>
    <string name="label_add_co2" translatable="false">Add CO2 emission</string>
    <string name="label_co2_title" translatable="false">Live CO2 data</string>
    <string name="label_co2_title2" translatable="false">Your CO2 emission</string>
    <string name="label_dailies_title" translatable="false">Where To ?</string>
    <string name="label_sum_co2_title" translatable="false">Sum</string>
    <string name="label_count_co2_title" translatable="false">Travel Duration (mins)</string>
    <string name="label_avg_co2_title" translatable="false">CO2 Average</string>
    <string name="label_welcome_home">Hello, Fauzi!</string>
    <string name="label_car_name">Mini Cooper S</string>
    <string name="label_total_spent_home">This month you spent</string>
    <string name="euro"></string>
    <string name="sample_spent">00,00</string>
    <string name="sample_percent">+00,0%</string>
    <string name="label_emitted_home">You emitted</string>
    <string name="sample_emitted">0</string>
    <string name="g">kg of CO2e</string>
    <string name="label_avg_consumption">Consumption</string>
    <string name="label_total_time" translatable="false">Equivalent</string>
    <string name="sample_consumption_home">0,0</string>
    <string name="l_100km">l/100km</string>
    <string name="minutes" translatable="false">trees</string>
    <string name="distribution">Distribution</string>
    <string name="trend">Trend</string>
    <string name="refuel">Refuel</string>
    <string name="label_data1">date</string>
    <string name="sample_date">14/06/2023</string>
    <string name="sample_price_per_liter">1.99</string>
    <string name="euro_per_liter">MYR/l</string>
    <string name="km">km</string>
    <string name="sample_km">21744</string>
    <string name="label_total_km1">KM at the time of refueling</string>
    <string name="_2022">2023</string>
    <string name="sample_description">Rear bumper replacement following the rear-end collision suffered on 09/06/2023.</string>
    <string name="delete_label">Delete</string>
    <string name="label_edit">edit</string>
    <string name="welcome_user">Hello, %1$s!</string>
    <string name="car_label">%1$s %2$s</string>
    <string name="km_l">km/l</string>
    <string name="label_user_profile">Your profile</string>
    <string name="name">name</string>
    <string name="hint_insert_name">Insert your name</string>
    <string name="save">Save</string>
    <string name="btn_send_notification">Send notification</string>
    <string name="btn_clear_data">Delete all data</string>
    <string name="btn_clear_expenses">Delete expenses</string>
    <string name="hint_name">Insert your name</string>
    <string name="hello">Hello!</string>
    <string name="placeholed_car">Mini Cooper S</string>
    <string name="generate_expenses">Generate expenses</string>
    <string name="update_refuel">Edit refuel</string>
    <string name="update_co2" translatable="false">Edit CO2</string>
    <string name="update_tax">Edit tax</string>
    <string name="update_maintenance">Edit maintenance</string>
    <string name="update_insurance">Edit insurance</string>
    <string name="insert_all_data_warning">Insert all data!</string>
    <string name="refuel_title">Refuel</string>
    <string name="co2_title" translatable="false">CO2</string>
    <string name="dailies_title" translatable="false">Dailies</string>
    <string name="insurance_title">Insurance</string>
    <string name="db_error">DB ERROR: delete all data and re-register the car</string>
    <string name="no_expense_registered_warning">No expenses registered!</string>
    <string name="maintenance_title">Maintenance</string>
    <string name="tax_title">Taxes</string>
    <string name="travel_title" translatable="false">Travels</string>
    <string name="expenses_trend">"Expenses trend "</string>
    <string name="consumptions_update">"Consumptions update "</string>
    <string name="spent_this_month">"This month you spent "</string>
    <string name="ppm" translatable="false">ppm</string>
    <string name="emitting">" MYR, emitting "</string>
    <string name="with_medium_consumption">" g of CO, with an average consumption of "</string>
    <string name="doing_great">% compared with the previous month, you\'re doing great!</string>
    <string name="can_do_better">% compared with the previous month, you can do better!</string>
    <string name="no_item_selected">No item selected!</string>
    <string name="delete">"Delete "</string>
    <string name="confirm_delete">Confirming, you will permanently delete this expense!</string>
    <string name="enter_valid_name">Enter a valid name!</string>
    <string name="home">Home</string>
    <string name="expenses_list">Expenses list</string>
    <string name="air_filter">Air filter</string>
    <string name="oil_change">Oil change</string>
    <string name="brake_pads">Brake pads</string>
    <string name="example_tax_description1">Monthly payment</string>
    <string name="example_maint_description1">43MYR pads + 30MYR labor</string>
    <string name="example_maint_description2">Oil change at Baum Autowerk in Subang, SEL</string>
    <string name="example_ins_description1">Second yearly payment</string>
    <string name="start_button" translatable="false">Start</string>
    <string name="stop_button" translatable="false">Stop</string>
    <string name="pause_button" translatable="false">Pause</string>
    <string name="save_journey_button" translatable="false">Journey Complete</string>
    <string name="sum_label" translatable="false">Sum</string>
</resources>