<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetReadingsActivity"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/GetReadingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Get_co2_readings"
        android:textSize="28sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="22dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/etCo2DataContainer"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_co2_title"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/lightgray"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/single_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_co2_title"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="4dp"
            android:autofillHints=""
            android:textSize="18dp"
            android:gravity="center_vertical"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/etCo2SumContainer"
        android:layout_marginBottom="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sum_co2_title"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/lightgray"
        android:letterSpacing="0.16"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/sum_text_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/hint_co2_title"
        android:inputType="text"
        android:paddingStart="24dp"
        android:paddingEnd="4dp"
        android:autofillHints=""
        android:textSize="18dp"
        android:gravity="center_vertical"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/etCo2CountContainer"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_count_co2_title"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/lightgray"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/count_text_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_co2_title"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="4dp"
            android:autofillHints=""
            android:textSize="18dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/etCo2AvgContainer"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_avg_co2_title"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/lightgray"
            android:letterSpacing="0.16"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/average_text_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_co2_title"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="4dp"
            android:autofillHints=""
            android:textSize="18dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/start_button"
        app:cornerRadius="100dp"
        android:layout_marginTop="42dp"/>

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/pause_button"
        app:cornerRadius="100dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/gray"
        android:visibility="gone"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/save_journey_button"
        app:cornerRadius="100dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/greengasoil"/>
</LinearLayout>